Bug 499607. Stop leaking nsBlockFrame's overflow nsLineList's.  r=fantasai sr=dbaron